bug fix
removed main windows margin shifts that would cause youtube's video
player to look weird

--- a/browser css/mini-tree.css
+++ b/browser css/mini-tree.css
@@ -27,6 +27,6 @@
 
 #main-window:not([chromehidden*="toolbar"])[sizemode="normal"] {
 	margin-top: -22px !important;
-	margin-left: -1px !important;
-	margin-bottom:  -1px !important;
 }
+
+[id="widget:info@priceblink.com-priceblink-widget"] {display: none !important;}
